--- a/pages/situation.html
+++ b/pages/situation.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <!-- <script>
+    <script>
         document.addEventListener("DOMContentLoaded", function () {
             const checkboxes = document.querySelectorAll('.checkbox-container input[type="checkbox"]');
 
@@ -38,7 +38,7 @@
                 });
             });
         });
-    </script> -->
+    </script>
 
 </head>
 
@@ -46,8 +46,23 @@
     body {
         margin: 0;
         padding: 0;
-        background-color: #1A1A1A;
+        background-color: #C1C1C1;
+        color: white;
     }
+
+    /* Detalhes nav */
+    #nav {
+        background-color: #333333;
+    }
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-top: 10%;
+    }
+
+    /* Detalhes corpo */
 
     .base_situation {
         display: flex;
@@ -57,143 +72,100 @@
         justify-content: space-between;
     }
 
+    .dupla {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 75vh;
+        margin-top: 8%;
+    }
+
     .situacao_texto1 {
         color: white;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: flex-end;
         align-items: center;
         font-family: 'Inter', sans-serif;
         font-size: 18px;
         width: 100%;
-        height: 8%;
-        background-color: rgba(0, 255, 255, 0.258);
-        /* margin-top: 18%; */
+        height: 20%;
     }
 
     .situacao_quadrado {
         display: flex;
-        height: 45%;
+        height: 100%;
         width: 100%;
         justify-content: center;
         align-items: center;
-        background-color: #5e5eb1;
     }
 
     .quadrado {
         display: flex;
-        /* height: 41%; */
-        /* justify-content: center;
-        align-content: center; */
-        width: 65%;
-        height: 75%;
-        background-color: #2f2f8c;
-    }
-
-
-
-
-    /* Detalhes botão voltar */
-    .espaço_botao {
-        display: flex;
-        width: 100%;
-        height: 14%;
-        justify-content: right;
-        background-color: rgba(0, 255, 255, 0.145);
-
-    }
-
-    .botao {
-        display: flex;
-        /* height: 50%; */
+        background-color: #7F7F7F;
+        border-radius: 15px;
+        margin-top: 4%;
+        width: 543px;
+        height: 372px;
+        justify-content: center;
         align-items: center;
-        margin-right: 10%;
-    } 
-
-
-    /* .situacao_quadrado {
-        display: flex;
-        justify-content: center;
-        margin-top: 5%;
-    } */
-
-
-    /* * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        background-color: #1a1a1a;
-    } */
-
-    /* .situacao_texto1 {
-        color: white;
-        display: flex;
-        justify-content: center;
-        font-family: 'Inter', sans-serif;
-        font-size: 18px;
-        margin-top: 18%;
-    } */
-
-    /* .situacao_quadrado {
-        display: flex;
-        justify-content: center;
-        margin-top: 5%;
-    } */
-
-    /* .situacao_quadrado1 {
-            background-color: #333;
-            width: 420px;
-            height: 250px;
-            border-radius: 15px;
-        } */
-    /* 
-    .consciente {
-        background-color: #1a1a1a;
-        width: 300px;
-        height: 70px;
-        border-radius: 10px;
-        margin-top: 40px;
-        display: flex;
-        align-items: center;
+        flex-direction: column;
         justify-content: space-around;
     }
 
-    .consciente_meio {
+    .consciente {
+        background-color: #1a1a1a;
+        width: 80%;
+        height: 28%;
+        border-radius: 10px;
         display: flex;
+        align-items: center;
         justify-content: center;
+        color: white;
+        font-family: 'Inter', sans-serif;
+        /* justify-content: space-around; */
     }
 
     .inconsciente {
         background-color: #1a1a1a;
-        width: 300px;
-        height: 70px;
+        width: 80%;
+        height: 28%;
         border-radius: 10px;
-        margin-top: 30px;
         display: flex;
         align-items: center;
-        justify-content: space-around;
-    }
-
-    .inconsciente_meio {
-        display: flex;
         justify-content: center;
-    }
-
-    .consciente h4 {
-        color: white;
-        font-family: 'Inter', sans-serif;
-    }
-
-    .inconsciente h4 {
         color: white;
         font-family: 'Inter', sans-serif;
     }
 
     .consciente_texto {
-        margin-top: -7px;
+        display: flex;
+        width: 80%;
+        align-items: center;
+        justify-content: center;
+        justify-content: space-between;
+
+
     }
+
+    /* Detalhes botão voltar */
+    .espaço_botao {
+        display: flex;
+        width: 100%;
+        height: 19%;
+        justify-content: right;
+        justify-content: center;
+        /* background-color: rgba(0, 255, 255, 0.164); */
+    }
+
+    .botao {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+    }
+
+
 
     .checkbox-container {
         display: flex;
@@ -202,13 +174,13 @@
         padding-left: 30px;
         margin-left: 150px;
         margin-top: -20px;
-        /* Espaço para o checkbox personalizado */
-    /* margin-bottom: 10px;
+        /* /Espaço para o checkbox personalizado */
+        margin-bottom: 10px;
         cursor: pointer;
 
-    } */
+    }
 
-    /* .checkbox-container input {
+    .checkbox-container input {
         position: absolute;
         opacity: 0;
         cursor: pointer;
@@ -255,106 +227,75 @@
         transform: rotate(45deg);
     }
 
-    */
 
-
-    /* @media screen and (max-width:770px) {
-
-        .situacao_texto1 {
-            color: white;
-            display: flex;
-            justify-content: center;
-            font-family: 'Inter', sans-serif;
-            font-size: 18px;
-            margin-top: 43%;
-        }
-
-    } */
 </style>
 
 <body>
     <div class="base_situation">
-        <div class="situacao_texto1">
-            <div>
-                <h1>Situação do Paciente</h1>
+        <nav class="navbar navbar-dark fixed-top" id="nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
+                <p class="navbar-title mt-3 fw-bold">SITUAÇÃO DO PACIENTE</p>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                    aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CATEGORIAS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">PERFIL</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">SAIR</a>
+                            </li>
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="situacao_quadrado">
-            <div class="quadrado">
-                <h1>olá</h1>
+        </nav>
+        <div class="dupla">
+            <div class="situacao_quadrado">
+                <div class="quadrado">
+                    <div class="consciente">
+                        <div class="consciente_texto">
+                            <h4>Consciente</h4>
+                            <label class="checkbox-container">
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="inconsciente">
+                        <div class="consciente_texto">
+                            <h4>Inconsciente</h4>
+                            <label class="checkbox-container">
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="espaço_botao">
             <div class="botao">
-                <button type="button" class="btn btn-outline-primary">Primary</button>
+                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
             </div>
         </div>
     </div>
-    <!-- <div class="situacao_quadrado1">
-
-            <div class="consciente_meio">
-                <div class="consciente">
-                    <div class="consciente_texto">
-                        <h4>Consciente</h4>
-                        <label class="checkbox-container">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                </div>
-            </div>
-
-            <div class="inconsciente_meio">
-                <div class="inconsciente">
-                    <div class="consciente_texto">
-                        <h4>Inconsciente</h4>
-                        <label class="checkbox-container">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                </div>
-            </div>
-
-        </div> -->
-    </div>
-
-
-
-    <!-- 
-    <div class="situacao_quadrado">
-        <div class="situacao_quadrado1">
-
-            <div class="consciente_meio">
-                <div class="consciente">
-                    <div class="consciente_texto">
-                        <h4>Consciente</h4>
-                        <label class="checkbox-container">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                </div>
-            </div>
-
-            <div class="inconsciente_meio">
-                <div class="inconsciente">
-                    <div class="consciente_texto">
-                        <h4>Inconsciente</h4>
-                        <label class="checkbox-container">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-     -->
-
-
 </body>
 
 </html>
