--- a/pages/gestacional2.html
+++ b/pages/gestacional2.html
@@ -103,11 +103,11 @@
                 </div>
 
                 <div class="card col-9 mt-4 d-flex flex-column justify-content-center">
-                    <div class="container d-flex gap-4 p-0">
+                    <div class="container d-flex p-0">
 
                         <div class="container d-flex">
-                            <label class="card-text mb-0">FEZ PRÉ-NATAL?</label>
-                            <div class="container d-flex gap-4 p-0">
+                            <label class="card-text mb-0" style="white-space: nowrap;">FEZ PRÉ-NATAL?</label>
+                            <div class="container d-flex gap-4 p-0 ml-3">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="flexRadioDefault"
                                         id="flexRadioDefault1">
