--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -34,31 +34,39 @@
         #nav{
             background-color: #333333;
         }
-        .container {
+        .casa {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             flex-wrap: wrap;
-            margin-top: 10%;
+            height: 98%;
+            width: 100%;
         }
 
-        .column {
-            width: 48%; /* Defina a largura das colunas de acordo com suas preferências */
+        .column{
+            width: 40%; 
             box-sizing: border-box;
             padding: 10px;
-            border: 1px solid #ccc;
-            margin-bottom: 20px;
+            /* margin-bottom: 20px; */
+            height: 100%;
         }
 
         .block {
             background-color: #333333;
-            padding-left: 6%;
-            margin-bottom: 10px;
-            height: 22%;
+            margin-bottom: 14px;
+            height: 8%;
+            display: flex;
+            align-items: center;
+        }
+        .container-ultimo{
+            background-color: #333333;
+            width: 88%;
+            margin-left: 6%;
+            height: 17%;
         }
     </style>
 </head>  
 <body>
-     <nav class="navbar navbar-dark fixed-top" id="nav">
+     <nav class="navbar navbar-dark" id="nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a> 
         <p class="navbar-title mt-3">TIPO DE OCORRÊNCIA (PRÉ-HOSPITALAR)</p>
@@ -91,34 +99,45 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <!-- <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="container card"></div>
+            </div>
+            <div class="col-6">
+                <div class="container card"></div>
+            </div>
+        </div>
+    </div> -->
+    <div class="casa mt-4">
             <div class="column">
-                <div class="block">Bloco 1</div>
-                <div class="block">Bloco 2</div>
-                <div class="block">Bloco 3</div>
-                <div class="block">Bloco 4</div>
-                <div class="block">Bloco 5</div>
-                <div class="block">Bloco 6</div>
-                <div class="block">Bloco 7</div>
-                <div class="block">Bloco 8</div>
-                <div class="block">Bloco 9</div>
-                <div class="block">Bloco 10</div>
-                <!-- Adicione os outros blocos do Grupo 1 aqui -->
+                <div class="block"><div>CAUSADO POR ANIMAIS</div></div>
+                <div class="block px-3"><div>COM MEIO DE TRANSPORTE</div></div>
+                <div class="block"><div>DESMORONAMENTO/DESLIZAMENTO</div></div>
+                <div class="block"><div>EMERGÊNCIA MÉDICA</div></div>
+                <div class="block"><div>QUEDA DE ALTURA 2M</div></div>
+                <div class="block"><div>TENTATIVA DE SUICÍDIO</div></div>
+                <div class="block"><div>QUEDA PRÓPRIA ALTURA</div></div>
+                <div class="block"><div>AFOGAMENTO</div></div>
+                <div class="block"><div>AGRESSÃO</div></div>
+                <div class="block"><div>ATROPELAMENTO</div></div>    
+               
             </div>
             <div class="column">
-                <div class="block">Bloco 11</div>
-                <div class="block">Bloco 12</div>
-                <div class="block">Bloco 13</div>
-                <div class="block">Bloco 14</div>
-                <div class="block">Bloco 15</div>
-                <div class="block">Bloco 16</div>
-                <div class="block">Bloco 17</div>
-                <div class="block">Bloco 18</div>
-                <div class="block">Bloco 19</div>
-                <div class="block">Bloco 20</div>
-                <!-- Adicione os outros blocos do Grupo 2 aqui -->
+                <div class="block"><div>CHOQUE ELÉTRICO</div></div>
+                <div class="block"><div>DESABAMENTO</div></div>
+                <div class="block"><div>DOMÉSTICO</div></div>
+                <div class="block"><div>ESPORTIVO</div></div>
+                <div class="block"><div>INTOXICAÇÃO</div></div>
+                <div class="block"><div>QUEDA BICICLETA</div></div>
+                <div class="block"><div>QUEDA MOTO</div></div>
+                <div class="block"><div>QUEDA NÍVEL<2M</div></div>
+                <div class="block"><div>TRABALHO</div></div>
+                <div class="block"><div>TRANSFERÊNCIA</div></div>
+                
             </div>
   </div>
+  <div class="container-ultimo p-4"><div>OUTRO</div></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
